src/test/ui/feature-gates/feature-gate-doc_cfg.stderr
error[E0658]: #[doc(cfg(...))] is experimental
  --> $DIR/feature-gate-doc_cfg.rs:1:1
   |
LL | #[doc(cfg(unix))]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/43781
   = help: add #![feature(doc_cfg)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
